<?xml version="1.0" encoding="utf-8"?>
<!--
/*******************************************************************************
* Copyright (c) 2014-2015 IBM Corp.
*
* All rights reserved. This program and the accompanying materials
* are made available under the terms of the Eclipse Public License v1.0
* and Eclipse Distribution License v1.0 which accompany this distribution.
*
* The Eclipse Public License is available at
*   http://www.eclipse.org/legal/epl-v10.html
* and the Eclipse Distribution License is available at
*   http://www.eclipse.org/org/documents/edl-v10.php.
*
* Contributors:
*    Mike Robertson - initial contribution
*******************************************************************************/
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              style="@style/ActivityBackground"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context="com.ibm.iot.android.iotstarter.fragments.IoTPagerFragment"
        >
    <com.ibm.iot.android.iotstarter.views.DrawingView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:id="@+id/drawing">
    </com.ibm.iot.android.iotstarter.views.DrawingView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal"
        android:id="@+id/linearLayout2">
        <TextView
                style="@style/MyActionBarTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_id_iot"
                android:id="@+id/deviceIDSettingIoT"
                />
        <View android:layout_width="0dp"
              android:layout_height="match_parent"
              android:layout_weight="1" />
        <TextView
                style="@style/MyActionBarTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_id_iot_value"
                android:id="@+id/deviceIDIoT"
                />
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
        android:layout_weight="1"
                  android:gravity="center|bottom"
                  android:orientation="vertical"
        android:id="@+id/linearLayout"
        android:layout_below="@+id/accelZ"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:id="@+id/linearLayout3">
        <TextView
                style="@style/MyActionBarTitleText"
                android:gravity="center"
                android:paddingTop="16dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/messages_published"
                android:id="@+id/messagesPublishedView"
                />
        <TextView
                style="@style/MyActionBarTitleText"
                android:gravity="center"
                android:paddingBottom="16dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/messages_received"
                android:id="@+id/messagesReceivedView"
                />
    </LinearLayout>

    <TextView
            style="@style/MyActionBarTitleText"
            android:gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/accel_info"
            android:id="@+id/accelInfo"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="56dp" />

    <TextView
            style="@style/MyActionBarTitleText"
            android:gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/accel_x"
            android:id="@+id/accelX"
        android:layout_below="@+id/accelInfo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
            style="@style/MyActionBarTitleText"
            android:gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/accel_y"
            android:id="@+id/accelY"
        android:layout_below="@+id/accelX"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
            style="@style/MyActionBarTitleText"
            android:gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/accel_z"
            android:id="@+id/accelZ"
        android:layout_below="@+id/accelY"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/activityTypeText"
        android:layout_above="@+id/linearLayout3"
        android:layout_centerHorizontal="true"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/activity_type"
        android:id="@+id/textView"
        android:layout_above="@+id/activityTypeText"
        android:layout_centerHorizontal="true" />
</RelativeLayout>